feat(server/api): add relative progress to query result
